# personal-repo

./: .gitignore  .pre-commit-config.yaml  Fisher Jenks Natural Breaks in Data  Justfile  README.md  fisher_jenks_natural_breaks.py  pyproject.toml
Fisher Jenks Natural Breaks /: fisher_jenks_natural_breaks.py
Get Recipe Ingredients/: get_recipe_ingredients.py
color_calendar_events/: color_calendar_events.js
grocery_wizard/: authorize_google_apis.py
project/tidy_first/: tidy_first_practice.py
projects/color_calendar_events/: color_calendar_events.js
projects/fisher_jenks_natural_breaks/: __init__.py
projects/grocery_wizard/: get_recipe_ingredients_from_link.py
projects/python_practice/function_structure/: __init__.py
projects/tidy_first/: __init__.py
src/grocery_wizard/: authorize_google_apis.py
src/python_practice/function_structure/: __init__.py
src/python_practice/tidy_first/: __init__.py
tests/projects/tidy_first/: test_tidy_first.py
tests/projects/tidy_first/python_practice/: test_function_structure.py  test_tidy_first.py
tests/python_practice/: test_function_structure.py  test_tidy_first.py
